<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            app:layoutDescription="@xml/activity_main_scene">

            <FrameLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="-30dp"
                android:background="@color/backgroundPinkLight"
                android:minHeight="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>

            <ImageView
                android:id="@+id/imgHeaderBackground"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_img_main"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/img_main_background_night" />

            <TextView
                android:id="@+id/tvCityCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="22dp"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/productsans"
                android:text="@string/city_default"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_search"
                app:layout_constraintBottom_toBottomOf="@+id/tvCityCountry"
                app:layout_constraintEnd_toStartOf="@+id/settingsBtn"
                app:layout_constraintTop_toTopOf="@+id/tvCityCountry"
                app:srcCompat="@drawable/ic_search"
                style="@style/CircleImageButton" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:contentDescription="@string/button_settings"
                app:layout_constraintBottom_toBottomOf="@+id/searchBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/searchBtn"
                app:srcCompat="@drawable/ic_settings"
                style="@style/CircleImageButton" />

            <TextView
                android:id="@+id/tvMainDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:fontFamily="@font/productsans"
                android:text="@string/degree_default"
                android:textColor="@color/white"
                android:textSize="112sp"
                app:layout_constraintBottom_toTopOf="@+id/clDateDegrees"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCityCountry" />

            <TextView
                android:id="@+id/tvFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-20dp"
                android:fontFamily="@font/productsans"
                android:text="@string/degree_feels_like"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvMainDegree"
                app:layout_constraintStart_toEndOf="@+id/tvMainDegree"
                app:layout_constraintTop_toTopOf="@+id/tvMainDegree"
                app:layout_constraintVertical_bias="0.75" />

            <ImageView
                android:id="@+id/imgMainWeatherIcon"
                android:layout_width="107dp"
                android:layout_height="107dp"
                android:layout_marginEnd="22dp"
                android:contentDescription="@string/desc_img_main_weather"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/tvWeatherMainText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchBtn"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_clear_day" />

            <TextView
                android:id="@+id/tvWeatherMainText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:breakStrategy="balanced"
                android:ellipsize="none"
                android:fontFamily="@font/productsans"
                android:gravity="center"
                android:hyphenationFrequency="fullFast"
                android:maxLines="3"
                android:minWidth="200dp"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="@string/weather_type_default"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/clDateDegrees"
                app:layout_constraintEnd_toEndOf="@+id/imgMainWeatherIcon"
                app:layout_constraintStart_toStartOf="@+id/imgMainWeatherIcon"
                app:layout_constraintTop_toBottomOf="@+id/imgMainWeatherIcon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clDateDegrees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productsans"
                    android:text="@string/info_last_update"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvDayDegrees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productsans"
                    android:text="@string/degree_day_night"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/flTodayWeather"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>